{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 16,
  "lineage": "204a74e0-50c5-d6af-4d4d-f18a979fa553",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644366177495:internet-gateway/igw-05d423ff07d417a5d",
            "id": "igw-05d423ff07d417a5d",
            "owner_id": "644366177495",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-igw"
            },
            "tags_all": {
              "Name": "leelasai-igw"
            },
            "vpc_id": "vpc-0457adecf563b8336"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2_jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0786adace1541ca80",
            "arn": "arn:aws:ec2:us-west-2:644366177495:instance/i-023a8b5c04dfc7b1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023a8b5c04dfc7b1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "leelasai-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02236f46d64189f52"
              }
            ],
            "primary_network_interface_id": "eni-02236f46d64189f52",
            "private_dns": "ip-10-0-1-43.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.43",
            "public_ip": "35.93.180.128",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aa11efae7e0a85f6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ce8ee1d45155fb9",
            "tags": {
              "Name": "leelasai_jenkins-EC2_instance"
            },
            "tags_all": {
              "Name": "leelasai_jenkins-EC2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b85c92ef43459de7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "644366177495",
            "id": "i-023a8b5c04dfc7b1f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security-grp",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2_sonarqube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0320940581663281e",
            "arn": "arn:aws:ec2:us-west-2:644366177495:instance/i-091c783f946a3d4bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091c783f946a3d4bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "leelasai-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fbd364ba7888a3e5"
              }
            ],
            "primary_network_interface_id": "eni-0fbd364ba7888a3e5",
            "private_dns": "ip-10-0-1-54.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_ip": "54.203.176.204",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0276d9afb8c0572aa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ce8ee1d45155fb9",
            "tags": {
              "Name": "leelasai_sonarqube-EC2_instance"
            },
            "tags_all": {
              "Name": "leelasai_sonarqube-EC2_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b85c92ef43459de7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "644366177495",
            "id": "i-091c783f946a3d4bb",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security-grp",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644366177495:route-table/rtb-01de490a2742b94ee",
            "id": "rtb-01de490a2742b94ee",
            "owner_id": "644366177495",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d423ff07d417a5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "leelasai-route-table"
            },
            "tags_all": {
              "Name": "leelasai-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0457adecf563b8336"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "644366177495",
            "id": "rtb-01de490a2742b94ee",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086fb6e029ee536f8",
            "region": "us-west-2",
            "route_table_id": "rtb-01de490a2742b94ee",
            "subnet_id": "subnet-06ce8ee1d45155fb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route_table.aws_route_table.route_table",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644366177495:security-group/sg-0b85c92ef43459de7",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b85c92ef43459de7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "leelasai-stage-security-group",
            "name_prefix": "",
            "owner_id": "644366177495",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leelasai-stage-security-group"
            },
            "tags_all": {
              "Name": "leelasai-stage-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0457adecf563b8336"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "644366177495",
            "id": "sg-0b85c92ef43459de7",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644366177495:subnet/subnet-06ce8ee1d45155fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ce8ee1d45155fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644366177495",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-subnet"
            },
            "tags_all": {
              "Name": "leelasai-subnet"
            },
            "vpc_id": "vpc-0457adecf563b8336"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "644366177495",
            "id": "subnet-06ce8ee1d45155fb9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:644366177495:vpc/vpc-0457adecf563b8336",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb61e6a6a32e3b11",
            "default_route_table_id": "rtb-086a1b91b0cf361d2",
            "default_security_group_id": "sg-01586ede00068f1b9",
            "dhcp_options_id": "dopt-06d4ff93c5c3bb721",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0457adecf563b8336",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-086a1b91b0cf361d2",
            "owner_id": "644366177495",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-vpc"
            },
            "tags_all": {
              "Name": "leelasai-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "644366177495",
            "id": "vpc-0457adecf563b8336",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}